# bone

./: .gitignore  .travis.yml  Cargo.toml  README.md  app.js  config.json  package-lock.json  package.json
cmd/: index.js
cmd/init/: init.js
cmd/run/: run.js
cmd/update/: update.js
cmd/upgrade/: upgrade.js
src/: LICENSE  README.md  main.rs
src/cmd/: build.rs  init.rs  mod.rs  run.rs  update.rs  upgrade.rs
src/utils/: config.rs  mod.rs  processor.rs
templates/binocle/: .gitignore.binocle  CMakeLists.txt  binocle.json
templates/binocle-c/: .gitignore.binocle  CMakeLists.txt  binocle.json
templates/binocle-c/src/: main.c
templates/binocle-c/src/gameplay/: CMakeLists.txt
templates/binocle/src/: MyGame.cpp  MyGame.hpp  main.cpp  sys_config.h  sys_config.h.cmake
utils/: processor.js
